# humpday

./: .gitignore  .pre-commit-config.yaml  AI-USAGE.md  CITE.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  CROSS_VALIDATION_DELIVERY_SUMMARY.md  Embarrassingly_SHGO.ipynb  FORMATTING.md  GOALS.md  INSTALL.md  MODULAR_IMPLEMENTATION_STATUS.md  README.md  README_CLAUDE.md  RESUME.md  SECURITY_FIXES_SUMMARY.md  SKILL.md  VALIDATION_FRAMEWORK_README.md  VISUALIZATION_EMBEDDING_SUMMARY.md  basin_hopping_around_chatgpt4.ipynb  benchmark_suite.py  black_box_optimization_package_recommender.ipynb  comprehensive_algorithm_results.json  comprehensive_algorithm_validation_report.md  comprehensive_audit_report.json  comprehensive_site_audit.py  comprehensive_test.py  comprehensive_validation_report.md  comprehensive_validation_results.json  cross_validation_framework.py  demo_validation_framework.py  discrete_objective_scratch.ipynb  humpday_points_race.ipynb  humpday_prima_pure.py  js_prima_comparison_report.md  js_prima_results.json  jss_authors.html  jss_guidelines.html  pyproject.toml  requirements.txt  (+10 more)
.github/: README.md
.github/workflows/: ci.yml  deploy-demo.yml  publish-npm.yml  publish.yml  quality.yml  test-ax.yml  test-bayesopt.yml  test-bobyqa.yml  test-dlib.yml  test-freelunch.yml  test-hebo.yml  test-hyperopt.yml  test-nevergrad-github.yml  test-nevergrad.yml  test-nlopt.yml  test-optuna.yml  test-platypus.yml  test-pySOT.yml  test-pymoo.yml  test-skopt.yml  test-ultraopt.yml  tests.yml
benchmarks/: build_js_grid_asset.py  build_recommendation_grid.py  elo_ratings.json  port_characterisation.json  recommendation_grid.json  record_elo.py  reference_alignment.json
docs/: ACCURACY_ASSESSMENT.md  CNAME  EMBED.md  README.md  TEMPLATE.md  adaptive-optimization.md  algorithm-mapping-validation.html  algorithm-visualization-demo-clean.html  algorithm-visualization-demo-simple.html  algorithm-visualization-demo.html  algorithm-visualization-demo.html.backup  algorithms.html  bijection-viz-ideas.md  bobyqa.html  contest-modular.html  contest.html  debug-modules.html  definitive_optimizer_rankings.md  grid-to-pitch-simplex.html  index.html  js-python-validation-tests.html  js_algorithm_test.js  learn-powell.html  linkedin_post_generator.html  nelder-mead.html  optimization_contest.html  optimization_insights_and_opinions.md  optimization_landscape_survey.md  papers.html  prima_integration_complete.md  recommendations.html  scipy-interface.md  simplex-cube-bijection.html  soccer-field-simplex.html  sota-status.html  stick_breaking_demo.html  test-modular.html  test-optimizers.html  uobyqa.html  web_platform_design.md
docs/algorithms/: adaptive-random-search.html  alloy.html  ant-colony-optimization.html  bayesian-optimization.html  bobyqa.html  bowling.html  cma-evolution-strategy.html  coordinate-descent.html  differential-evolution.html  evolution-strategy.html  firefly-algorithm.html  genetic-algorithm.html  harmony-search.html  hill-climbing.html  lbfgsb.html  nelder-mead-scipy.html  nelder-mead.html  newuoa.html  particle-swarm.html  pattern-search.html  powell.html  random-search.html  simulated-annealing.html  tabu-search.html  (+2 more)
example_applications/: DEMOS_SHORTLIST.md  README.md
examples/: adaptive_optimization_example.py  embarrassingly_parallel_shgo.py  markowitz.py  planar_h1_optimizer.py  scale_example.py  scipy_interface_example.py
experiments/: benchmark_validation.py  comprehensive_benchmark.py  comprehensive_optimizer_ranking.py  comprehensive_surface_benchmark.py  debug_prima_evaluations.py  debug_scipy_wrappers.py  demo_prima_integration.py  dimensional_scaling_contest.py  expanded_benchmark.py  final_competitive_analysis.py  final_embarrassingly_verdict.py  final_optimizer_rankings.py  fixed_optimizer_ranking.py  focused_optimizer_ranking.py  simple_analysis.py  simple_direct_comparison.py  simple_prima_demo.py  single_objective_platform.py  test_embarrassingly_shy.py  test_embarrassingly_simple.py  test_novel_embarrassingly.py  test_plateau_finding.py  test_prima_constraints.py  test_prima_fix.py  thorough_embarrassingly_test.py
humpday/: __init__.py  _array.py  _array_numpy.py  _array_numpy_linalg.py  _array_pure.py  _array_pure_linalg.py  _prng.py  coordinates.py  eligibility.py  line_arima.py  planar_h1.py  plotting.py
notes/: PORT_EQUIVALENCE.md  asktell-optimizer-interface.md  online-optimizers.md  weekend-experiments.md
paper/: README.md  compile_paper.sh  humpday-jss.bib
papers/: derivative_free_bibliography.bib  humpday-jss-thurstone.tex  jss.cls
parity/: record_transition_vectors.py  transition_vectors.json
results/: 3d_thurstone_analysis_20260520_142949.json  jss_results_summary_20260520_142735.json  summary_report_20260520_152842.md  surface_metadata_20260520_152842.txt  thurstone_rankings_20260520_152842.pkl
scripts/: release.py
tests/: js_parity_runner.js  js_prng_runner.js  js_vector_replay_runner.js  reference_impls_pre_online.py  simple_js_test.py  test_adaptive_optimizer_missing_coverage.py  test_all_objectives.py  test_array_shim.py  test_array_shim_linalg.py  test_asktell.py  test_bayesianoptimization.py  test_browser_smoke.py  test_complete_validation.py  test_comprehensive_coverage.py  test_core_coverage.py  test_dlib_and_simplex.py  test_edge_case_coverage.py  test_eligibility.py  test_elo_optimizers.py  test_final_coverage.py  test_freelunch.py  test_freelunch_and_simplex.py  test_hebo_and_simplex.py  test_implementation_validation.py  test_js_eligibility_parity.py  test_js_parity.py  test_js_vector_replay.py  test_missing_lines_coverage.py  test_nevergrad_and_simplex.py  test_normhelper.py  test_online_pilot.py  test_optimizer_termination.py  test_optimizers.py  test_optuna.py  test_port_behavior.py  test_portable_rng_mode.py  test_ported_algorithms.py  test_portfolio.py  test_prng_parity.py  test_pure_objectives.py  (+11 more)
validation_results/: comprehensive_validation_report.json
web/: algorithm-template.html  bobyqa.html  differential-evolution.html  nelder-mead.html  simple_contest.html  test-optimizers.html  uobyqa.html
(+461 files in other folders)
