[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humpday"
version = "0.8.0"
description = "Taking the pain out of choosing a Python global optimizer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "microprediction", email = "pcotton@intechinvestments.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies - Pyodide compatible
dependencies = [
    "numpy>=1.21.5",
    # Pure Python optimization algorithms - no external optimizer packages needed
    # Lightweight implementation with 9 validated algorithms
]

[project.optional-dependencies]
# Only include working optimizers that don't cause compatibility issues
extra = [
    "optuna>=3.0.0",  # Known to work with Python 3.12
]

# Legacy packages that may work but aren't guaranteed (install at your own risk)
experimental = [
    "nevergrad>=1.0.0",
    "bayesian-optimization>=3.0.0",
    "platypus-opt>=1.0.0",
    "cmaes>=0.10.0",
    # Note: ax-platform, nlopt, dlib, hyperopt have compatibility issues
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

# Paper writing (JSS submission)
paper = [
    "jinja2>=3.0.0",      # For LaTeX templating
    "seaborn>=0.11.0",    # For publication plots
    "pandas>=1.3.0",      # For results analysis
    # Note: Tectonic LaTeX engine installed separately via system package manager
]

[project.urls]
Homepage = "https://github.com/microprediction/humpday"
Documentation = "https://microprediction.github.io/humpday/"
Repository = "https://github.com/microprediction/humpday"
"Bug Tracker" = "https://github.com/microprediction/humpday/issues"

[project.scripts]
humpday = "humpday.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["humpday"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
