[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humpday"
version = "0.20.0"
description = "Taking the pain out of choosing a Python global optimizer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<3.15"
authors = [
    { name = "microprediction", email = "pcotton@intechinvestments.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies — none. Every algorithm has a pure-Python path via
# `humpday._array`, so `pip install humpday` ships a true zero-dependency
# wheel. For speed on dimensions where it matters, opt into the numpy
# backend with `pip install humpday[fast]` below.
dependencies = []

[project.optional-dependencies]
# Speed: numpy backend for the shim. Algorithm code calls the same shim
# functions either way; numpy is transparently used when available.
fast = [
    "numpy>=1.21.5",
]

# Only include working optimizers that don't cause compatibility issues
extra = [
    "optuna>=3.0.0",  # Known to work with Python 3.12
]

# Legacy packages that may work but aren't guaranteed (install at your own risk)
experimental = [
    "nevergrad>=1.0.0",
    "bayesian-optimization>=3.0.0",
    "platypus-opt>=1.0.0",
    "cmaes>=0.10.0",
    # Note: ax-platform, nlopt, dlib, hyperopt have compatibility issues
]

# Development dependencies. Includes numpy because much of the test
# suite imports numpy directly (parity tests, reference checks, etc.)
# — `[fast]` is the *runtime* numpy opt-in for end-users; `[dev]` is
# the superset needed to develop and run the full test suite.
dev = [
    "numpy>=1.21.5",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

# Headless-browser smoke tests (tests/test_browser_smoke.py). Installs
# Playwright; the test fixture auto-skips if Chromium hasn't also been
# fetched via `playwright install chromium`.
browser = [
    "playwright>=1.40.0",
]

# Trusted third-party reference implementations for the
# tests/test_reference_alignment.py characterisation harness.
# Each algorithm in PURE_OPTIMIZERS that has a reference equivalent
# can be cross-checked when these are installed.
reference = [
    "scipy>=1.7.0",
    "scikit-optimize>=0.9.0",
    "cmaes>=0.10.0",
    "pyswarms>=1.3.0",
    "Py-BOBYQA>=1.4",
    "deap>=1.3.0",
    # mealpy covers ParticleSwarm / GeneticAlgorithm / FireflyAlgorithm
    # / HarmonySearch / EvolutionStrategy / AntColonyOpt under one
    # install (see _ref_mealpy_* in tests/test_reference_alignment.py).
    "mealpy>=3.0.0",
    # PDFO requires a compiler; install separately if needed:
    #     pip install pdfo
]

# Paper writing (JSS submission)
paper = [
    "jinja2>=3.0.0",      # For LaTeX templating
    "seaborn>=0.11.0",    # For publication plots
    "pandas>=1.3.0",      # For results analysis
    # Note: Tectonic LaTeX engine installed separately via system package manager
]

[project.urls]
Homepage = "https://github.com/microprediction/humpday"
Documentation = "https://microprediction.github.io/humpday/"
Repository = "https://github.com/microprediction/humpday"
"Bug Tracker" = "https://github.com/microprediction/humpday/issues"

[project.scripts]
humpday = "humpday.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["humpday"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "F841",  # unused local variables - will fix later
    "B006",  # mutable defaults - will fix later
    "B904",  # raise from - will fix later
    "B028",  # stacklevel warnings - will fix later
    "E712",  # comparison to True - will fix later
    "UP035", # typing imports - will fix later
    "UP006", # typing annotations - will fix later
    "E722",  # bare except - will fix later
    "F401",  # unused imports - will fix later
    "B007",  # unused loop variables - will fix later
    "E402",  # module level import - will fix later
    "E741",  # ambiguous variable names - will fix later
    "F821",  # undefined names in examples - will fix later
    "C403",  # unnecessary list comprehension - will fix later
    "C408",  # unnecessary dict/list calls - will fix later
    "C419",  # unnecessary list comprehension - will fix later
    "C414",  # unnecessary list() in sorted - will fix later
    "B023",  # function definition in loop - will fix later
    "E731",  # lambda assignment - will fix later
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-m", "not validation and not slow and not browser and not reference",
]

markers = [
    "validation: opt-in algorithm-validation regression tests (slow, run with -m validation)",
    "slow: tests that take seconds-to-minutes (run with -m slow or skip with -m 'not slow')",
    "browser: headless-browser smoke tests; requires `pip install playwright && playwright install chromium`",
    "reference: cross-checks HumpDay ports against third-party reference implementations (scipy, scikit-optimize, cmaes, pyswarms, Py-BOBYQA, DEAP, PDFO). Install with `pip install humpday[reference]`.",
]


[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
